主合约文档更新

--- a/主合约文档.md
+++ b/主合约文档.md
@@ -174,7 +174,7 @@ function getBalanceOf(address _userAdd) external view returns (uint) {}
 
 ## 2.获取警方用户
 
-传入要获取的警方编号
+传入要获取的用户地址
 
 返回用户结构
 
@@ -192,15 +192,13 @@ function getBalanceOf(address _userAdd) external view returns (uint) {}
     }
 ```
 
-
-
 ```solidity
-function getPoliceUser(uint _policeIndex) external view returns (User memory) {}
+function getPoliceUser(address _userAdd) external view returns (User memory) {}
 ```
 
 ## 3.获取市民用户
 
-传入要获取的市民编号
+传入要获取的用户地址
 
 返回用户结构
 
@@ -219,7 +217,7 @@ function getPoliceUser(uint _policeIndex) external view returns (User memory) {}
 ```
 
 ```solidity
-function getCivilUser(uint _civilIndex) external view returns (User memory) {}
+function getCivilUser(address _userAdd) external view returns (User memory) {}
 ```
 
 ## 4. 获取案件列表
@@ -247,13 +245,19 @@ function getCivilUser(uint _civilIndex) external view returns (User memory) {}
     }
 ```
 
-
-
 ```solidity
 function getCaseList() external view returns (Case[] memory) {}
 ```
 
-## 5.获取指定案件状态
+## 5.获取我的历史审核案件（信息有效性）
+
+返回案件结构数组
+
+```solidity
+function getMyHistoryCaseValiditySet() external view returns (Case[] memory) {}
+```
+
+## 6.获取指定案件状态
 
 传入案件编号
 
@@ -269,7 +273,7 @@ function getCaseList() external view returns (Case[] memory) {}
 function getCaseState(uint _caseIndex) external view returns (uint) {}
 ```
 
-## 6.获取当前地址是否已投票（指定案件）
+## 7.获取当前地址是否已投票（指定案件）
 
 传入案件编号
 
@@ -279,7 +283,7 @@ function getCaseState(uint _caseIndex) external view returns (uint) {}
 function getIsVoted(uint _caseIndex) external view returns (bool) {}
 ```
 
-## 7.获取指定案件得票数
+## 8.获取指定案件得票数
 
 传入案件编号
 
@@ -289,7 +293,7 @@ function getIsVoted(uint _caseIndex) external view returns (bool) {}
 function getVoteCountOf(uint _caseIndex) external view returns (uint, uint, uint) {}
 ```
 
-## 8.获取任务列表
+## 9.获取任务列表
 
 返回任务结构数组
 
@@ -321,7 +325,7 @@ function getVoteCountOf(uint _caseIndex) external view returns (uint, uint, uint
 function getTaskList() external view returns (Task[] memory) {}
 ```
 
-## 9.获取任务回答
+## 10.获取任务回答
 
 返回是否是诈骗案件和回复结构
 
@@ -347,7 +351,7 @@ function getTaskList() external view returns (Task[] memory) {}
 function getTaskReply(uint _taskIndex) external view returns (bool, Reply memory) {}
 ```
 
-## 10.获取商品列表
+## 11.获取商品列表
 
 返回商品结构数组
 
@@ -367,7 +371,7 @@ function getTaskReply(uint _taskIndex) external view returns (bool, Reply memory
 function getProductList() external view returns (Product[] memory) {}
 ```
 
-## 11.获取交易贴列表
+## 12.获取交易贴列表
 
 返回交易贴结构数组
 
@@ -393,7 +397,7 @@ function getProductList() external view returns (Product[] memory) {}
 function getTransactionPostList() external view returns (TransactionPost[] memory) {}
 ```
 
-## 12.获取指定交易贴下的回复列表
+## 13.获取指定交易贴下的回复列表
 
 传入要回复的交易贴编号
 
